--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Huaizhou Li
-site_url: https://huaizhou-li.com
+site_url: https://huaizhouli.github.io/
 theme:
   name: material
 theme:
