--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,19 @@
 site_name: Huaizhou Li
 site_url: https://huaizhouli.github.io/
 
+
 theme:
-  name: material
-  custom_dir: overrides
   palette:
-    scheme: slate
-    primary: blue
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
 
 markdown_extensions:
   - admonition
