--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,9 @@
-site_name: Huaizhou Li
+site_name: Huaizhou's Blog
 site_url: https://huaizhouli.github.io/
+site_author: Huaizhou Li
+repo_name: huaizhouli/huaizhouli.github.io
+repo_url: https://github.com/huaizhouli/huaizhouli.github.io
+edit_uri: edit/main/docs/
 
 nav:
   - Home: index.md
