--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Huaizhou's Blog
 site_url: https://huaizhouli.github.io/
 site_author: Huaizhou Li
-repo_name: huaizhouli/huaizhouli.github.io
+repo_name: huaizhouli.github.io
 repo_url: https://github.com/huaizhouli/huaizhouli.github.io
 edit_uri: edit/main/docs/
 
