--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_url: https://github.com/huaizhouli/huaizhouli.github.io
 edit_uri: edit/main/docs/
 
 nav:
-  - Home: index.md
+  - About Me: index.md
   - Research:
       - research/index.md
   - Teaching:
