--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ docs_dir: docs/
 
 theme:
   name: material
+  icon: 
+    logo: material/notebook-outline
   features:
     - navigation.tabs
     - search.suggest
